[project]
name = "kdag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph",
    "langchain-openai",
    "networkx",
    "python-dotenv",
    "pandas>=2.3.3",
    "pathway",
    "qdrant-client",
    "pathway[xpack-llm]",
    "argparse",
    "sentence-transformers>=5.2.0",
]
